# anamnesis

./: .gitignore  README.md  README.org  pyproject.toml  setup.py
anamnesis/: anamnesis.py  browser.py  clipboard.py  clipboard_gtk.py  clipboard_gtk_xclip.py  config.py  daemon.py  db.py  db_sqlite3fts.py  test_clipboard.py
source/: anamnesis.py  browser.py  clipboard_gtk.py  config.py  daemon.py
